8041918: BootstrapMethods attribute cannot be empty. Summary: Allow a BootstrapMethods attribute that contains an empty bootstrap_methods table where num_bootstrap_methods is equal to zero. Reviewed-by: lfoltan, coleenp, hseigel